Makes more progress on the homepage. TODO: 1. Center footer items when contracted. 2. Fix blog. 3. Fix projects section on smaller screens.

--- a/blog/static/blog/css/navbar.css
+++ b/blog/static/blog/css/navbar.css
@@ -11,13 +11,13 @@ html, body {
 @font-face {
     font-family: LeagueSpartan;
     font-weight: bold;
-    src: url("blog/fonts/LeagueSpartan-Bold.otf") format("opentype");
+    src: url("../fonts/LeagueSpartan-Bold.otf") format("opentype");
 }
 
 @font-face {
     font-family: CopperHewitt;
     font-weight: bold;
-    src: url("blog/fonts/CooperHewitt-Bold.otf") format("opentype");
+    src: url("../fonts/CooperHewitt-Bold.otf") format("opentype");
 }
 
 .row{
@@ -104,7 +104,6 @@ video{
 /*VIDEO*/
 
 .mission-statement .mission-statement-text{
-  font-family: 'LeagueSpartan';
   font-size: 1.8rem;
   margin: 1em;
 
@@ -227,85 +226,28 @@ video{
   font-size: 2rem;
   font-weight: bold;
 }
+.involved-text{
+  max-height: 200px;
+}
 /*GET INVOLVED ENDS*/
+
+.supported-by{
+  padding: 3em;
+}
 
 /*FOOTER*/
 #footer {
-    background-color: #FEE856;
-    padding-top: 3em;
-    padding-bottom: 1em;
+    background-color: #555555;
+    padding: 3em;
 }
-#footer .section-title {
-  font-size: 24px;
-  font-weight: 400;
+
+.footer-text{
+  color: white;
+  font-size: 1.5rem;
 }
-#footer ul {
-  margin: 0;
-  padding: 0;
+
+.footer-icons{
+  width: 17%;
+  height: 8%;
+  padding: 0.5em;
 }
-#footer ul li {
-  font-size: 18px;
-  list-style: none;
-  margin-bottom: 0;
-}
-#footer ul li a {
-  color: #727272;
-}
-#footer .float {
-  width: 50%;
-  float: left;
-}
-@media screen and (max-width: 768px) {
-  #footer .float {
-    width: 100%;
-  }
-}
-#footer .copy-right {
-  padding-top: 4em;
-}
-#footer a {
-  color: black;
-}
-#footer a:hover, #footer a:focus {
-  text-decoration: none;
-  color: #539DDB;
-}
-#footer .form-inline .form-group {
-  width: 100% !important;
-  margin-bottom: 10px;
-}
-#footer .form-inline .form-group .form-control {
-  width: 100%;
-  background: rgba(0, 0, 0, 0.05);
-  border: none;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  border-radius: 4px;
-}
-#footer #fh5co-header-subscribe #email {
-  padding-right: 4em;
-}
-#footer #fh5co-header-subscribe button {
-  position: absolute;
-  top: 0;
-  right: 10px;
-  border-top-left-radius: 0px !important;
-  border-bottom-left-radius: 0px !important;
-  background: #539DDB;
-  border: none;
-}
-#footer #fh5co-header-subscribe button i {
-  color: #fff;
-  font-size: 25px;
-}
-.fh5co-social-icon a {
-  padding: 0 5px;
-}
-.fh5co-social-icon a i {
-  color: #000;
-}
-.fh5co-social-icon a:hover, .fh5co-social-icon a:focus {
-  text-decoration: none;
-}
-/*FOOTER ENDS*/
